# hw-2022

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.cjs
backend/: .gitignore  Dockerfile  Pipfile  app.py  waitress-server.py
backend/9c6cf6f1-1ff6-4a9b-abf3-0fa49527f262/: output.json
backend/b165e5dc-b96a-4d32-a066-bfa88638f99a/: output.json
backend/guide-dir/5f9519ba-ada3-4fa9-a706-afb3e297758f/: output.json
backend/guide-dir/609107b8-092f-4c5f-9fbd-c97ed4fb88fc/: output.json
backend/guide-dir/71b10384-7454-45ae-b5b6-f12e27021356/: output.json
backend/imagenAPI/: README.md  pyproject.toml
backend/imagenAPI/src/imagenapi/: __init__.py  imagen.sqlite  schema.sql
backend/pywikiFormatter/: data.csv  format.py  trainingData.txt
backend/wikiAPI/: app.py  requirements.txt  waitress-server.py
backend/wikiAPI/cohere_lib/: __init__.py  cohere.py
backend/wikiAPI/image_gen/: model.py
backend/wikiAPI/static/: prompt.txt
frontend/: .env  next.config.js  package-lock.json  tailwind.config.js
frontend/components/: loader.tsx  recommendations.tsx  search-box.tsx  wikihow-step.tsx
frontend/pages/: index.tsx
frontend/styles/: globals.css
prisma/: schema.prisma
src/components/: background.tsx  buttons.tsx  error.tsx  guide-card.tsx  loading.tsx  new-guide.tsx  part-card.tsx
src/env/: schema.mjs
src/pages/: index.tsx
src/server/: cohere.ts
src/styles/: globals.css
static/: paragraphs-prompt.txt
wikinow/: package.json  tailwind.config.cjs
wikinow/static/: steps-prompt.txt
(+15 files in other folders)
